--- a/web/coordinador/fases-trabajo-de-grado.xhtml
+++ b/web/coordinador/fases-trabajo-de-grado.xhtml
@@ -10,10 +10,6 @@
 
         <ui:composition template="./../plantillas/plantilla.xhtml">
 
-            <ui:define name="CuadroDeBotonesSesion">
-                CuadroDeBotonesSesion
-            </ui:define>
-
             <ui:define name="menuprincipal">
                 <script type="text/javascript">
                     function mostrarestado() {
@@ -30,9 +26,10 @@
                 <h:form>
                 <p:breadCrumb styleClass="migaDePan">
                     <p:menuitem value="Coordinador" outcome="vista-coordinador" />
-                    <p:menuitem value="Coordinador" outcome="vista-coordinador" />                      
-                    <p:menuitem value="Fases del Trabajo de Grado" 
-                                outcome="fases-trabajo-de-grado" />
+                    <p:menuitem value="Coordinador" outcome="vista-coordinador" />
+                    <p:menuitem value="Trabajo de Grado" outcome="vista-coordinador" />
+                    <p:menuitem value="Fases del Trabajo de Grado" outcome="fases-trabajo-de-grado" />
+                    <p:menuitem value="3. Evaluación del Anteproyecto" outcome="fases-trabajo-de-grado" />
                 </p:breadCrumb>
                     </h:form>
             </ui:define>
@@ -69,8 +66,8 @@
                                 <p:graphicImage value="../resources/img/6.png" style="width: 96px;" />                        
 
                                 
-                                <p:button value="Presentación de la Idea" disabled="#{trabajodegradoController.fases.segundaFase}" style="width: 105px;height: 96px; font-size: 13px;" />
-                                <p:button value="Realización del Anteproyecto"  disabled="#{trabajodegradoController.fases.segundaFase}" style="width: 105px;height: 96px; font-size: 13px;" />
+                                <p:button value="Presentación de la Idea" outcome="fase-presentacion-de-la-idea" disabled="#{trabajodegradoController.fases.segundaFase}" style="width: 105px;height: 96px; font-size: 13px;" />
+                                <p:button value="Realización del Anteproyecto" outcome="fase-realizacion-anteproyecto"  disabled="#{trabajodegradoController.fases.segundaFase}" style="width: 105px;height: 96px; font-size: 13px;" />
                                 <p:commandButton type="button" value="Evaluación del Anteproyecto" style="width: 105px; background-color:greenyellow; height: 96px; font-size: 13px;" disabled="#{trabajodegradoController.fases.primeraFase}" >                            
                                     <p:effect type="highlight" event="click" for="pnlEvaluacion">
                                         <f:param name="mode" value="'show'" />
@@ -82,11 +79,11 @@
                             </h:panelGrid>
                         </p:panel>      
                         <p:spacer height="25"/>
-                        <p:panel id="pnlEvaluacion" header="1. Presentación de la Idea" style=" font-size: 14px;" widgetVar="pnlPresentacionIdea">
+                        <p:panel id="pnlEvaluacion" header="1. Evaluación del Anteproyecto" style=" font-size: 14px;" widgetVar="pnlPresentacionIdea">
 
                             <h:panelGrid columns="3" cellpadding="5" cellspacing="5">
                                  <h:outputText value="Anteproyecto: " style="font-weight: bold;" />
-                                 <p:button value="Asignar Evaluadores" icon="ui-icon-comment" href="ver-anteproyecto.xhtml" disabled="#{trabajodegradoController.btnVerAnteproyecto}" style="width: 220px;" />                                
+                                 <p:button value="Asignar Evaluadores" icon="ui-icon-comment" href="asignar-evaluadores-anteproyecto.xhtml" disabled="#{trabajodegradoController.btnVerAnteproyecto}" style="width: 220px;" />                                
                                 <p:commandButton id="btndesc" value="Descargar" rendered="#{anteproyecto.filedown != null}"
                                                  ajax="false" onclick="PrimeFaces.monitorDownload(mostrarestado, ocultarestado);" 
                                                  icon="ui-icon-arrowthick-1-s" action="#{anteproyecto.preparardescarga()}">
