--- a/web/jefe-de-departamento/ver-formato-B_1.xhtml
+++ b/web/jefe-de-departamento/ver-formato-B_1.xhtml
@@ -13,8 +13,9 @@
             <ui:define name="menuprincipal">
                 <h:form>
                     <p:breadCrumb styleClass="migaDePan">
-                        <p:menuitem value="Evaluador" outcome="index" />
-                        <p:menuitem value="Evaluador" outcome="index" />                        
+                        <p:menuitem value="Director" outcome="./../director/vista-director.xhtml" />                                        
+                        <p:menuitem value="Jefe de Departamento" outcome="vista-jefe-de-departamento" />
+                        <p:menuitem value="Trabajos de Grado" outcome="vista-jefe-de-departamento" />     
                         <p:menuitem value="Fases del Trabajo de Grado" outcome="fases-trabajo-de-grado" />
                         <p:menuitem value="3. Evaluación del Anteproyecto" outcome="fases-trabajo-de-grado" />
                         <p:menuitem value="Ver Formato B" outcome="ver-formato-B" />
@@ -26,10 +27,15 @@
             </ui:define>
 
             <ui:define name="body">
-                #{formatoB.buscarEvaluador(serviciosSimcaController.nombreUsuario)}
-                #{formatoB.prepararEdicion()}
+
+                #{formatoB.btnVerFormatoB(2)}
                 <h:form>
-                    <p:menu model="#{menuView.model}" styleClass="menuizqroles" />                                        
+                    <p:menu styleClass="menuizqroles" style="background-color: white">
+                        <p:submenu label="Perfiles" style="background-color: white">
+                            <p:menuitem value="Director" outcome="./../director/vista-director.xhtml" />
+                            <p:menuitem value="Jefe de Departamento" outcome="vista-jefe-de-departamento" style="background-color: #c2dfef" />
+                        </p:submenu>                                
+                    </p:menu>
                 </h:form>
 
                 <p:panel styleClass="paneltrabajo" >
@@ -146,7 +152,7 @@
                                 </h:panelGrid>
                                 <br />
                                 <h:panelGrid columns="2" cellpadding="12" style="margin: 0 auto">
-                                    <p:button value="Volver" outcome="fases-trabajo-de-grado" icon="ui-icon-arrowthick-1-w" style="font-size: 13px;"/>                                
+                                    <p:button value="Volver" outcome="3-evaluacion-anteproyecto" icon="ui-icon-arrowthick-1-w" style="font-size: 13px;"/>                                
                                     <p:button value="Descargar" icon="ui-icon-arrowthickstop-1-s" style="font-size: 13px;" />
                                 </h:panelGrid>
                             </h:panelGrid>
