--- a/web/evaluador/index.xhtml
+++ b/web/evaluador/index.xhtml
@@ -35,25 +35,28 @@
                         </h:panelGrid>
                         <p:spacer height="25"/>
                         <h:outputLabel id="tituloVistaDirector" class="tituloContenido" value="Anteproyectos por evaluar" />        
-                        <p:spacer height="10"/>                        
-                        <p:dataTable styleClass="tabladirector" 
-                                     id="tableEvaluador" 
-                                     var="tabajoGrado" 
-                                     value="#{evaluador.trabajosDeGrado(serviciosSimcaController.nombreUsuario)}" 
-                                     paginator="true" 
-                                     rows="8" 
-                                     paginatorPosition="bottom" 
-                                     rowsPerPageTemplate="8,16,24"
-                                     style="font-size: 14px;" 
-                                     emptyMessage="Lo sentimos, no se encontraron trabajos de grado asignados para evaluar."
-                                     >                            
-                            <p:column style="width: 250px;" headerText="Trabajo de Grado">
-                                <p:commandLink  value="#{tabajoGrado.trabajonombre}" actionListener="#{evaluador.detalleTrabajoDeGrado}" style="color: #045491;">                                                                     
-                                    <f:attribute name="idtrabajo" value="#{tabajoGrado.trabajoid}" />    
-                                    <f:attribute name="nombretrab" value="#{tabajoGrado.trabajonombre}" />
-                                </p:commandLink>
-                            </p:column>                            
-                        </p:dataTable>
+                        <p:spacer height="10"/>                               
+                        <p:dataTable  styleClass="tabladirector" id="tablacoord" var="car" value="#{evaluador.trabajosporeval}"
+                                      paginator="true" rows="5" paginatorPosition="bottom" rowsPerPageTemplate="8,16,24" emptyMessage="Lo sentimos, no hay trabajos registrados." style="font-size: 14px;">
+
+                            <p:column style="width: 275px;" headerText="Trabajo de Grado"> <!--filterBy="{car.trabajoGrado}"-->
+                                <p:commandLink value="#{car.trabajoGrado}" actionListener="#{evaluador.contenidoTgEvaluador}" style="color: #045491;">                                     
+                                    <f:attribute name="idtrabajo" value="#{car.trabajoGradoId}" />    
+                                    <f:attribute name="nombretrab" value="#{car.trabajoGrado}" />
+                                    <f:attribute name="iddirector" value="#{car.directorId}" />
+                                    <f:attribute name="est1" value="#{car.est1Id}" />
+                                    <f:attribute name="est2" value="#{car.est2Id}" />
+                                </p:commandLink>             
+                            </p:column>
+                             <p:column style="width: 150px;" headerText="Estudiantes" > 
+                                #{car.est1} <br /> #{car.est2}      
+                            </p:column>
+                            <p:column headerText="Director"> 
+                                #{car.director}  
+                            </p:column>
+       
+                        </p:dataTable> 
+                        
                     </p:panel>
                 </h:form>                
             </ui:define>
