Correcciones 3er Sprint
Menu dinamico funcionado, faltan terminar

--- a/web/menu.xhtml
+++ b/web/menu.xhtml
@@ -18,7 +18,7 @@
             </ui:define>
 
             <ui:define name="body">
-                <h:form>
+                <h:form id="formMenu">
                     <p:growl id="growl" />
 
                     <p:menu model="#{menuController.model}" />                    
